# Rust-RestAPI

./: .env  Cargo.toml  db.json
src/: handler.rs  main.rs  routes.rs  schema.rs
src/handlers/: mod.rs
