[package]
name = "rustapi"
version = "0.1.0"
edition = "2021"   # change to 2021 (2024 edition is not stable yet)

[dependencies]
chrono = "0.4.42"
log = "0.4.28"
tokio = { version = "1.48.0", features = ["full"] }
warp = { version = "0.4", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.18", features = ["derive"] }
